styles/style.css
body {
    /* feel free to update these css variables for a quick theme */
    
    --color1: white;
    --color2: rgb(121, 190, 175);
    --color3: rgb(94, 76, 141);
    --color4: rgba(144, 185, 121, 0);
    --color5: rgb(162, 204, 158);
    
    /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
        
    /* --color1: hsla(349, 69%, 76%, 1);
    --color2: hsla(207, 67%, 44%, 1);
    --color3: hsla(200, 61%, 56%, 1);
    --color4: hsla(187, 41%, 94%, 1);
    --color5: hsla(170, 28%, 95%, 1); */

    /* --color1: hsla(45, 86%, 83%, 1);
    --color2: hsla(135, 65%, 98%, 1);
    --color3: hsla(315, 37%, 86%, 1);
    --color4: hsla(45, 73%, 98%, 1);
    --color5: hsla(224, 40%, 79%, 1); */
    
    --header-height: 80px;
    --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
    --gutter: 30px;
    --footer-height: 25px;
    
    font-family: 'Titillium Web', sans-serif;
    background-color: var(--color2);
}

main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: calc(var(--footer-height));
}

/*section {
    background-color: var(--color5);
    max-width: 80%;
    display: flex;
    flex-direction: column;
    justify-content:flex;
    align-items: center;
    padding-top: var(--gutter);
    padding-bottom: var(--gutter);
    margin-top: var(--gutter);
    margin-bottom: var(--gutter);
    border: solid 2px var(--color1); 
}*/


section {
    background-color: var(--color5);
    width: 95%;
    /*display: flex;*/
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: var(--gutter);
    padding-bottom: var(--gutter);
    margin-top: var(--gutter);
    margin-bottom: var(--gutter);
    border: solid 2px black;
}

header {
    display: flex;
    justify-content: flex-end;
    background-color: var(--color3);
    height: var(--header-height);
    box-shadow: var(--shadow);
}

.gutter-right {
    margin-right: 20px;
}

header img {
    height: var(--header-height);
}

footer {
    position: fixed;
    width: 100%;
    bottom: 0;
    height: var(--footer-height);
    display: flex;
    justify-content: flex-end;
    background-color: var(--color3);
    box-shadow: var(--shadow);
}

.city-pics {
    height: 300px;
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
}

.city-pics {
    height: 2px;
}

#water-img {
    height: 300px;
    width: 300px;
    border: black;
    border-style:solid
}

#city-img {
    height: 300px;
    width: 300px;
    border: black;
    border-style:solid
}

#rural-img{
    height: 300px;
    width: 300px;
    border: black;
    border-style:solid
}

section {
    display: grid;
    grid-template-columns: 1fr 1fr 2fr;
}

.main-section {
    align-content: right;
}

.user-inputs {
    height: 100%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
}

